--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "init": "^0.1.2"
   },
   "devDependencies": {
+    "jest": "^26.0.1",
     "nodemon": "^2.0.4"
   },
   "scripts": {
-    "server":"nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "server": "nodemon index.js",
+    "test": "jest --watch"
   },
   "repository": {
     "type": "git",
